Fixed skills text alignment

--- a/app/components/Skills.module.css
+++ b/app/components/Skills.module.css
@@ -21,7 +21,7 @@
   font-size: 14px;
   cursor: default;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 .SkillItem:hover .SkillText {
